add bottom nav, chage design, code merge from gzfrontend

--- a/src/app/compare/page.scss
+++ b/src/app/compare/page.scss
@@ -67,8 +67,8 @@
   }
 }
 .stock-out {
-  background: #92989d;
+  background: #92989d !important;
   &:hover {
-    background: #92989d;
+    background: #92989d !important;
   }
 }
