--- a/src/components/list-card/index.scss
+++ b/src/components/list-card/index.scss
@@ -54,9 +54,9 @@
   }
 
   .stock-out {
-    background: #92989d;
+    background: #92989d !important;
     &:hover {
-      background: #92989d;
+      background: #92989d !important;
     }
   }
 }
