--- a/src/app/(product)/product/[slug]/page.scss
+++ b/src/app/(product)/product/[slug]/page.scss
@@ -413,9 +413,9 @@
   border: none ;
 }
 .stock-out {
-  background: #92989d;
+  background: #92989d !important;
   &:hover {
-    background: #92989d;
+    background: #92989d !important;
   }
 }
 .video-placeholder {
