--- a/src/app/wishlist/page.scss
+++ b/src/app/wishlist/page.scss
@@ -63,8 +63,8 @@
   }
 }
 .stock-out {
-  background: #92989d;
+  background: #92989d !important;
   &:hover {
-    background: #92989d;
+    background: #92989d !important;
   }
 }
