--- a/src/app/(product)/product/[slug]/page.scss
+++ b/src/app/(product)/product/[slug]/page.scss
@@ -287,12 +287,8 @@
     color: #707070;
   }
   .discount {
-    background: $hexary-background-color;
+    background: $primary-background-color;
     color: $tertiary-text-color;
-    font-size: 12px;
-    margin-left: 16px;
-    font-family: $secondary-font;
-    padding: 5px;
   }
 
   .e-emi {
